Data has DataFormat instead of just the id